Changed findClosestMobOfType to use the more proper EntityType and updated wands accordingly; added hasPotionEffect method for future checks